--- a/app/globals.css
+++ b/app/globals.css
@@ -101,65 +101,20 @@
   display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
   margin-left: -30px; /* gutter size offset */
-  width: auto;
+  height: fit-content;
+  width: 100%;
 }
 .my-masonry-grid_column {
   padding-left: 30px;
   background-clip: padding-box;
 }
 
-.event-card {
-  overflow: hidden;
+.animate-add-event-card-overflow {
+  animation: add-event-card-overflow 1s forwards;
 }
 
-.event-card:hover .card-description {
-  animation: show-card-description 1s forwards;
-  opacity: 1;
-  transition: opacity 0.3s;
-}
-
-.event-card:not(:hover) {
-  animation: add-event-card-overflow 2s forwards;
-}
-
-.event-card:not(:hover) .card-description {
-  animation: return-card-description 1s forwards;
-}
-
-.event-card:hover {
+.animate-remove-event-card-overflow {
   animation: remove-event-card-overflow 1s forwards;
-}
-
-.card-description {
-  position: absolute;
-  bottom: -10rem;
-  height: 7rem;
-  background-color: white;
-  z-index: 20;
-  width: 80%;
-  left: auto;
-  right: auto;
-}
-
-@keyframes show-card-description {
-  50% {
-    transform: translateY(-10rem);
-  }
-  100% {
-    transform: translateY(-7rem);
-  }
-}
-
-@keyframes return-card-description {
-  0% {
-    transform: translateY(-7rem);
-  }
-  50% {
-    transform: translateY(-10rem);
-  }
-  100% {
-    transform: translateY(0.5rem);
-  }
 }
 
 @keyframes remove-event-card-overflow {
@@ -173,7 +128,7 @@
     overflow: initial;
     pointer-events: none;
   }
-  50% {
+  100% {
     overflow: hidden;
   }
 }
