feat : {experience page} dashboard logo and coloring

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,7 +105,8 @@
   width: 100%;
 }
 .my-masonry-grid_column {
-  padding-left: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   background-clip: padding-box;
 }
 
