--- a/app/globals.css
+++ b/app/globals.css
@@ -115,3 +115,36 @@
 .my-masonry-grid_column > div {
   margin-bottom: 50px;
 }
+
+.spotify-information-container {
+  display: grid;
+  height: fit-content;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  gap: 10px;
+  grid-template-areas:
+    "overall overall overall overall tech-stack tech-stack"
+    "development development why why tech-stack tech-stack"
+    "how how how how how how";
+}
+
+.spotify-information-container > .overall {
+  grid-area: overall;
+}
+
+.spotify-information-container > .why {
+  grid-area: why;
+}
+
+.spotify-information-container > .how {
+  grid-area: how;
+}
+
+.spotify-information-container > .development {
+  grid-area: development;
+}
+
+.spotify-information-container > .tech-stack {
+  grid-area: tech-stack;
+}
