fix : landing parallax

--- a/style/globals.css
+++ b/style/globals.css
@@ -70,8 +70,11 @@
   * {
     @apply border-border;
   }
+  htmL {
+    scroll-behavior: smooth;
+  }
   body {
-    @apply text-primary;
+    scroll-behavior: smooth;
   }
 }
 
